--- a/index.html
+++ b/index.html
@@ -5,41 +5,21 @@
       <meta http-equiv="X-UA-Compatilhe"  content="IE=edge">
       <meta name="viewport"  content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="style.css">
-      <title>Barcelona FC</title>
-      <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+      <title>SunSet</title>
 
 </head>
-
 <body>
-    
-    <img id="banner" src="imagens/images.jpg" alt="Banner do Barca">
-
-    <header>
-      <nav>
-          <ul id="ul-nav" class="ul-nav">
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="titulo.html">Títulos</a></li>
-              <li><a href="pagina3.html">El Clásico</a></li>
-              <li><a href="messi.html">Messi</a></li>
-          </ul>
-      </nav>
-  </header>
-    <hr>
-
-    <h1>Barcelona FC - Més Que Un Club</h1>
-
-    <p>Barcelona Futebol Clube, também conhecido como <em>Barça</em>, é um dos clubes mais populares e bem-sucedidos do futebol mundial. Fundado em 1899 por um grupo de jogadores suíços, ingleses e espanhóis, o clube foi criado com o objetivo de promover o futebol na cidade de <em>Barcelona</em>.</p>
-    <img id="noveoito" src="imagens/barca1899.jpg" alt="1899">
-    <p>Nos primeiros anos de sua existência, o Barcelona jogava principalmente contra equipes locais e regionais. No entanto, em 1902, o clube se juntou à Federação Espanhola de Futebol e começou a competir contra outros times espanhóis.</p>
-    <p>Durante as primeiras décadas do século XX, o Barcelona conquistou vários títulos regionais e nacionais. No entanto, o clube só se tornou uma força verdadeiramente dominante na década de 1950, quando ganhou cinco campeonatos espanhóis consecutivos.</p>
-    <p>Um dos momentos mais memoráveis da história do Barcelona ocorreu em <strong>1988</strong>, quando o clube ganhou sua primeira <strong>Liga dos Campeões da UEFA</strong>. Com um time estrelado liderado pelo lendário <em>Johan Cruyff</em>, o Barcelona derrotou o Steaua Bucareste na final por 2 a 0.</p>
-    <p>Nos anos 90, o Barcelona continuou a ser um dos melhores times da Europa, com destaque para as performances do brasileiro <em>Romário</em> e do espanhol <em>Pep Guardiola</em>. No entanto, foi na década de 2000 que o clube realmente brilhou, graças em grande parte à influência do técnico holandês <em>Frank Rijkaard</em> e de jogadores como <strong>Ronaldinho, Xavi e Andrés Iniesta</strong>.</p>
-    <p>Durante este período, o Barcelona ganhou <strong>quatro vezes a Liga dos Campeões da UEFA, seis campeonatos espanhóis e dois Mundiais de Clubes da FIFA</strong>. O clube também se tornou famoso por sua filosofia de jogo conhecida como <em>"tiki-taka"</em>, que enfatiza a posse de bola e o controle do jogo.</p>
-    <img id="quinze" src="imagens/2015_fc_barcelona.webp" alt="2015">
-    <p>Hoje, o Barcelona continua a ser um dos clubes mais populares e bem-sucedidos do futebol mundial, com uma legião de fãs leais em todo o mundo. Com uma equipe repleta de talentos como <strong>Lionel Messi, Luis Suárez e Neymar</strong>, o futuro do clube parece brilhante.</p>
-    <img id="msn" src="imagens/msn.jpg" alt="msn">
-    <hr>
+    <main>
+            <h4 id="em">Em</h4>
+            <h1 id="breve">Bre<em>ve!!</em></h1>
+            <h3 id="novidades">Novidades</h3>
+        <article>
+            <h1>Quer Participar da Organização?</h1>
+            <h3>Nos Chame na DM do Insta!</h3>
+        </article>
+    </main>
 
   </body>
-
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"> </script>
+  <script nomodule src="https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"> </script>
 </html>
