--- a/index.html
+++ b/index.html
@@ -1,25 +1,146 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatilhe"  content="IE=edge">
-      <meta name="viewport"  content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="style.css">
-      <title>SunSet</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatilhe" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
+    <title>SunSet</title>
+    <link rel="shortcut icon" href="Sunset-logo.png" type="image/x-icon">
 
 </head>
-<body>
-    <main>
-            <h4 id="em">Em</h4>
-            <h1 id="breve">Bre<em>ve!!</em></h1>
-            <h3 id="novidades">Novidades</h3>
-        <article>
-            <h1>Quer Participar da Organização?</h1>
-            <h3>Nos Chame na DM do Insta!</h3>
-        </article>
-    </main>
 
-  </body>
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"> </script>
-  <script nomodule src="https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"> </script>
+<body>
+    <header id="header">
+        <nav>
+            <div id="navbar-container">
+                <h1 class="logo">Sun<em>Set</em></h1>
+                <ul id="navbar-items">
+                    <li><a href="#lines">Lines</a></li>
+                    <li><a href="#titulos">Titles</a></li>
+                    <li><a href="#jogadores">Players</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <section id="banner">
+        <h1>We are an Esports and Gaming Company</h1>
+        <button><a href="https://discord.gg/R8KtjcRz">Nosso <em>Discord</em></a></button>
+    </section>
+    <section id="lines">
+        <div id="title">
+            <h1><em>LINE</em> Reborn</h1>
+        </div>
+        <div id="lineReborn">
+            <div class="players">
+                <div>
+                    <div class="playerPerfil">
+                        <img src="" alt="Imagem de Perfil">
+                        <h3>Mechha</h3>
+                    </div>
+                    <div class="playerEstatisticas">
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>Troféus: 60.870</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>3x3: 05.097</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>PL: Mítico III</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="playerConta">
+                    <img src="mechha.jpg" alt="">
+                </div>
+            </div>
+            <div class="players">
+                <div>
+                    <div class="playerPerfil">
+                        <img src="Imagem do WhatsApp de 2024-03-01 à(s) 23.28.34_92eb14c9.jpg" alt="Imagem de Perfil">
+                        <h3>TKzimmm</h3>
+                    </div>
+                    <div class="playerEstatisticas">
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>Troféus: 76.346</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>3x3: 29.684</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>PL: Lendário III</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="playerConta">
+                    <img src="tkfoto.jpg" alt="">
+                </div>
+            </div>
+            <div class="players">
+                <div>
+                    <div class="playerPerfil">
+                        <img src="matth2.jpg" alt="Imagem de Perfil">
+                        <h3>Matth</h3>
+                    </div>
+                    <div class="playerEstatisticas">
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>Troféus: 51.782</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>3x3: 15.031</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>PL: Mítico I</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="playerConta">
+                    <img src="matth.jpg" alt="">
+                </div>
+            </div>
+            <div class="players">
+                <div>
+                    <div class="playerPerfil">
+                        <img src="rodrigo2.jpg" alt="Imagem de Perfil">
+                        <h3>Rodrigo</h3>
+                    </div>
+                    <div class="playerEstatisticas">
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>Troféus: 52.410</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>3x3: 22.131</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>PL: Mítico II</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="playerConta">
+                    <img src="rodrigo.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+</body>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"> </script>
+<script nomodule src="https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"> </script>
+
 </html>
