--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <h1 class="logo">Sun<em>Set</em></h1>
                 <ul id="navbar-items">
                     <li><a href="#lines">Lines</a></li>
-                    <li><a href="#titulos">Titles</a></li>
-                    <li><a href="#jogadores">Players</a></li>
+                    <li><a href="#titulos">Títulos</a></li>
+                    <li><a href="#horarios">Horarios</a></li>
                 </ul>
             </div>
         </nav>
@@ -31,7 +31,7 @@
         <button><a href="https://discord.gg/R8KtjcRz">Nosso <em>Discord</em></a></button>
     </section>
     <section id="lines">
-        <div id="title">
+        <div class="title">
             <h1><em>LINE</em> Reborn</h1>
         </div>
         <div id="lineReborn">
@@ -136,8 +136,190 @@
                 </div>
             </div>
         </div>
+        <!--  <div class="title">
+            <h1><em>LINE</em> Revolution</h1>
+        </div>
+        <div id="lineReborn">
+            <div class="players">
+                <div>
+                    <div class="playerPerfil">
+                        <img src="" alt="Imagem de Perfil">
+                        <h3>Mechha</h3>
+                    </div>
+                    <div class="playerEstatisticas">
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>Troféus: 60.870</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>3x3: 05.097</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>PL: Mítico III</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="playerConta">
+                    <img src="mechha.jpg" alt="">
+                </div>
+            </div>
+            <div class="players">
+                <div>
+                    <div class="playerPerfil">
+                        <img src="Imagem do WhatsApp de 2024-03-01 à(s) 23.28.34_92eb14c9.jpg" alt="Imagem de Perfil">
+                        <h3>TKzimmm</h3>
+                    </div>
+                    <div class="playerEstatisticas">
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>Troféus: 76.346</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>3x3: 29.684</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>PL: Lendário III</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="playerConta">
+                    <img src="tkfoto.jpg" alt="">
+                </div>
+            </div>
+            <div class="players">
+                <div>
+                    <div class="playerPerfil">
+                        <img src="matth2.jpg" alt="Imagem de Perfil">
+                        <h3>Matth</h3>
+                    </div>
+                    <div class="playerEstatisticas">
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>Troféus: 51.782</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>3x3: 15.031</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>PL: Mítico I</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="playerConta">
+                    <img src="matth.jpg" alt="">
+                </div>
+            </div>
+            <div class="players">
+                <div>
+                    <div class="playerPerfil">
+                        <img src="rodrigo2.jpg" alt="Imagem de Perfil">
+                        <h3>Rodrigo</h3>
+                    </div>
+                    <div class="playerEstatisticas">
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>Troféus: 52.410</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>3x3: 22.131</h5>
+                        </div>
+                        <div class="estatisticas">
+                            <img src="#" alt="">
+                            <h5>PL: Mítico II</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="playerConta">
+                    <img src="rodrigo.jpg" alt="">
+                </div>
+            </div>
+        </div> -->
     </section>
-
+    <section id="horarios">
+        <div class="title">
+            <h1>Hora<em>rios</em></h1>
+        </div>
+        <table id="tabela">
+            <tr>
+                <th>SunSet</th>
+                <th>Domingo</th>
+                <th>Segunda</th>
+                <th>Terça</th>
+                <th>Quarta</th>
+                <th>Quinta</th>
+                <th>Sexta</th>
+                <th>Sábado</th>
+            </tr>
+            <tr>
+                <td>18h00</td>
+                <td class="horas">- - - - -</td>
+                <td class="horas">- - - - -</td>
+                <td class="horas">- - - - -</td>
+                <td class="horas">- - - - -</td>
+                <td class="horas">- - - - -</td>
+                <td class="horas">- - - - -</td>
+                <td class="horas">- - - - -</td>
+            </tr>
+            <tr>
+            <tr>
+                <td>19h00</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+            </tr>
+            <tr>
+                <td>20h00</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+            </tr>
+            <tr>
+                <td>21h00</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+            </tr>
+            <tr>
+                <td>22h00</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+            </tr>
+            <tr>
+                <td>23h00</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+                <td class="horas">Ah Marcar</td>
+            </tr>
+        </table>
+    </section>
 
 </body>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"> </script>
