--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul id="navbar-items">
                     <li><a href="#lines">Lines</a></li>
                     <li><a href="#titulos">Títulos</a></li>
-                    <li><a href="#horarios">Horarios</a></li>
+                    <li><a href="#horarios">Horários</a></li>
                 </ul>
             </div>
         </nav>
@@ -244,7 +244,7 @@
     </section>
     <section id="horarios">
         <div class="title">
-            <h1>Hora<em>rios</em></h1>
+            <h1>Horá<em>rios</em></h1>
         </div>
         <table id="tabela">
             <tr>
